--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "beargroup/amazon-alexa-magento-2-module",
-  "description": "Amazon Alexa integration",
+  "name": "amzn/amazon-pay-magento-2-alexa-plugin",
+  "description": "Official Magento2 Plugin to integrate with Amazon Pay Alexa",
   "type": "magento2-module",
   "version": "1.0.1",
   "license": [
