--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "amzn/amazon-pay-magento-2-alexa-plugin",
-  "description": "Official Magento2 Plugin to integrate with Amazon Pay Alexa",
+  "name": "beargroup/amazon-alexa-magento-2-module",
+  "description": "Amazon Alexa integration",
   "type": "magento2-module",
   "version": "1.0.1",
   "license": [
@@ -8,13 +8,13 @@
   ],
   "require": {
     "php": "~7.1.3||~7.2.0||~7.3.0",
-    "amzn/amazon-pay-and-login-with-amazon-core-module": "^3.0.0",
-    "amzn/login-with-amazon-module": "^3.0.0",
-    "magento/framework": "^102",
-    "magento/module-backend": "^101",
+    "amzn/amazon-pay-and-login-with-amazon-core-module": "^2.1.0 || ^3.0.0",
+    "amzn/login-with-amazon-module": "^2.1.0 || ^3.0.0",
+    "magento/framework": "^101 || ^102",
+    "magento/module-backend": "^100 || ^101",
     "magento/module-config": "^101",
-    "magento/module-sales": "^102",
-    "magento/module-store": "^101",
+    "magento/module-sales": "^101 || ^102",
+    "magento/module-store": "^100 || ^101",
     "zendframework/zend-crypt": "^2.6 || ^3.0"
   },
   "suggest": {
